tests/fsharp/typecheck/overloads/neg_System.Threading.Tasks.Task.Run.OverloadList.bsl

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(5,11,5,35): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: (unit -> Task<int>)

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(6,11,6,44): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(7,11,7,47): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(8,21,8,57): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(9,11,9,50): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(10,11,10,52): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>
